--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "type": "module",
   "scripts": {
     "start": "tsx watch src/app.ts",
+    "make:migration": "prisma migrate dev --name",
+    "migrate": "prisma db push",
+    "prisma": "prisma generate",
     "build": "tsc && vite build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,19 +16,27 @@
   "author": "Guilherme PS",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^4.26.2"
+    "@prisma/client": "5.11.0",
+    "dotenv": "^16.4.5",
+    "fastify": "^4.26.2",
+    "prisma": "^5.11.0",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.27",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "^6.7.5",
-    "tsx": "^4.7.1",
-    "typescript": "^5.4.2",
-    "eslint": "^8.51.0",
-    "eslint-config-prettier": "^9.0.0",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import-helpers": "^1.3.1",
-    "eslint-plugin-prettier": "^5.0.0",
-    "prettier": "^3.0.3",
-    "prisma": "^5.4.1"
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.5",
+    "tsx": "^4.7.1",
+    "typescript": "^5.4.2"
+  },
+  "prisma": {
+    "schema": "src/common/database/schema.prisma"
   }
 }
