--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
     "prisma": "^5.11.0",
-    "uuid": "^9.0.1",
+    "uuidv7": "^0.6.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
