--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
     "tsx": "^4.7.1",
+    "vitest": "^1.4.0",
     "typescript": "^5.4.2"
   },
   "prisma": {
