--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "type": "module",
   "scripts": {
     "start": "tsx watch src/app.ts",
-    "make:migration": "prisma migrate dev --name",
-    "migrate": "prisma db push",
+    "migrate": "npx prisma migrate dev --name init",
     "prisma": "prisma generate",
     "build": "tsc && vite build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest --config ./vite.config.ts",
+    "coverage": "vitest --coverage"
   },
   "keywords": [],
   "author": "Guilherme PS",
@@ -25,17 +25,20 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.27",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "@vitest/coverage-v8": "^1.4.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
+    "supertest": "^6.3.4",
     "tsx": "^4.7.1",
-    "vitest": "^1.4.0",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "vitest": "^1.4.0"
   },
   "prisma": {
     "schema": "src/common/database/schema.prisma"
