feat: Add Docker file and settings to use Docker compose

--- a/package.json
+++ b/package.json
@@ -2,29 +2,31 @@
   "name": "message-collector-api",
   "version": "1.0.0",
   "description": "",
+  "keywords": [],
+  "license": "ISC",
+  "author": "Guilherme PS",
+  "type": "commonjs",
   "main": "src/app.ts",
-  "type": "module",
   "scripts": {
-    "start": "tsx watch src/app.ts",
+    "start": "node ./dist/app.js",
+    "build": "tsc && tsc-alias",
+    "coverage": "vitest --coverage",
+    "dev": "tsx watch src/app.ts",
     "migrate": "npx prisma migrate dev --name init",
     "prisma": "prisma generate",
-    "build": "tsc && vite build",
-    "test": "vitest --config ./vite.config.ts",
-    "coverage": "vitest --coverage"
+    "test": "vitest --config ./vite.config.ts"
   },
-  "keywords": [],
-  "author": "Guilherme PS",
-  "license": "ISC",
   "dependencies": {
     "@prisma/client": "5.11.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
     "prisma": "^5.11.0",
+    "tsc-alias": "^1.8.8",
     "uuidv7": "^0.6.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.11.27",
+    "@types/node": "20.11.1",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
