--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "vitest --config ./vite.config.ts"
   },
   "dependencies": {
+    "@types/node": "^20.11.1",
     "@prisma/client": "5.11.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
@@ -27,7 +28,6 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "20.11.1",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
